# Elonxi_nirs

./: .gitignore  esp&stm通讯指令.xlsx  小型肌电多包补包.xlsx
Elonxi_Multi_NIRS/: CMakeLists.txt
Elonxi_Multi_NIRS/components/BSP/: CMakeLists.txt
Elonxi_Multi_NIRS/components/BSP/CMT2300/: cmt2300_rx_tx.c  cmt2300_rx_tx.h  cmt2300a.h  drv_cmt2300a.c  drv_cmt2300a.h  radio.c  radio.h
Elonxi_Multi_NIRS/components/BSP/IIC/: iic.c  iic.h
Elonxi_Multi_NIRS/components/BSP/LED/: led.c
Elonxi_Multi_NIRS/components/BSP/UART/: circular_buffer.c  circular_buffer.h  uart.c  uart.h
Elonxi_Multi_NIRS/components/BSP/filters/: filters.c
Elonxi_Multi_NIRS/components/BSP/mpu9250/: i2c_mpu9250.c  i2c_mpu9250.h
Elonxi_Multi_NIRS/main/: CMakeLists.txt  main.c
Elonxi_Multi_NIRS/main/APP/: app.c  app.h  app_data.h  sdmmc.c  sdmmc.h  wifi_data.c  wifi_data.h  wifi_ota.c  wifi_ota.h  wifi_udp_app.c
Elonxi_NIRS/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  版本说明.txt
Elonxi_NIRS/components/BSP/: CMakeLists.txt
Elonxi_NIRS/components/BSP/ADC/: adc1.c  adc1.h
Elonxi_NIRS/components/BSP/CMT2300/: cmt2300a.c  cmt2300a_params.h  typedefs.h
Elonxi_NIRS/components/BSP/LED/: led.c  led.h
Elonxi_NIRS/components/BSP/NIRS/: NIRS.c  NIRS.h
Elonxi_NIRS/components/BSP/filters/: filters.h
Elonxi_NIRS/components/BSP/mpu9250/: i2c_mpu9250.c  i2c_mpu9250.h
Elonxi_NIRS/main/: main.c
Elonxi_NIRS/main/APP/: app.c  app.h  app_data.c  sdmmc.c  sdmmc.h  wifi_data.c  wifi_data.h  wifi_udp_app.c  wifi_udp_app.h
